--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   font-style: normal;
 }
 
+.TypingAnimation {
+  font-family: VT323, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .Display {
   display: flex;
   background-color: #1A93BF;
@@ -94,9 +100,6 @@
   margin: 10px;
 }
 
-.Ball {
-  
-}
 
 .Screen {
   display: flex;
@@ -108,4 +111,23 @@
   background: #E4E6E3;
   width: 860px;
   height: 600px;
+}
+
+/*// ANIMATED ELEMENTS //*/
+
+.Ball {
+  animation: float 2s infinite alternate;
+  
+}
+
+.Ball:hover {
+  opacity: 50%;
+  animation: paused;
+}
+
+/*// KEYFRAMES //*/
+
+@keyframes float{
+  from{ transform: translateY(0)}
+  to{ transform: translateY(120px)}
 }
