--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,17 @@
   line-height: normal;
 }
 
-.TextBox {
+.UnclickedTextBox {
+  border-radius: 23px;
+  border: 12px solid grey;
+  background: #F5F2F2;
+  width: 730px;
+  height: 200px;
+  margin: 20px;
+  margin-bottom: 20px;
+}
+
+.ClickedTextbox {
   border-radius: 23px;
   border: 12px solid grey;
   background: #F5F2F2;
@@ -108,9 +118,15 @@
   justify-content: space-between;
   border-radius: 28px;
   border: 12px solid black;
-  background: #E4E6E3;
+  background: #ACACAC;
   width: 860px;
   height: 600px;
+}
+
+.BallAnimation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*// ANIMATED ELEMENTS //*/
