--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
-.jersey-10-regular {
-  font-family: "Jersey 10", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
+/* DISPLAY.JSX CSS*/
 
 .TypingAnimation {
   font-family: VT323, sans-serif;
@@ -118,3 +114,81 @@
   width: 860px;
   height: 600px;
 }
+
+/* TRAINERPAGE.JSX CSS*/
+.Navbar {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 30px;
+  z-index: 2;
+
+  width: 100%;
+
+  background-color: #a0db62;
+
+  color: black
+
+}
+
+.Title {
+  font-size: 60px;
+  font-weight: 600;
+  text-decoration: none;
+  color: black;
+  margin-left: 30px;
+
+}
+
+.Menu {
+  display: flex;
+  margin-right: 30px;
+  
+}
+
+.MenuItems {
+  display: flex;
+  gap: 47px;
+  list-style: none;
+
+}
+
+.MenuItems a {
+  font-size: 30px;
+  color: black;
+  text-decoration: none;
+
+}
+
+.Intro {
+  display: flex;
+  position: relative;
+}
+
+.Landscape {
+  display: flex; /* Make the height of the background 100% of the viewport */
+  height: 100vh;
+  width: 100%;
+  background-size: cover; /* Make the image cover the entire viewport */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+}
+
+.Characters {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: space-between;
+  height: 300px;
+  width: 100%;
+  margin-top: 470px;
+}
+
+.Hedie {
+}
+
+.Kirbymon {
+}
+
+
